# DealMind

./: .env.example  .gitignore  README.md  agents.py  api.py  main.py  pyproject.toml  railway.toml  requirements.txt  sec_mcp_server.py  test_crew.py  test_groq_models.py  test_local_stream.py  test_models.py  test_single_agent.py  test_yfinance.py  tools.py
finance-ui/: package-lock.json  package.json
finance-ui/src/: App.jsx  index.css
