[project]
name = "agentic-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "crewai-tools>=1.11.0",
    "crewai[google-genai,litellm,mcp]>=1.11.0",
    "e2b-code-interpreter>=2.5.0",
    "fastapi>=0.135.1",
    "sse-starlette>=3.3.3",
    "uvicorn>=0.42.0",
    "weave>=0.52.35",
    "yfinance>=1.2.0",
]
